--- a/src/styles/ItemsPage.module.css
+++ b/src/styles/ItemsPage.module.css
@@ -11,3 +11,21 @@
 .container form {
     text-align: center;
 }
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+.form label {
+    margin: 0;
+}
+
+.form input {
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    padding: 6px;
+}
